Finished tsushima maru and soba shorts, and set up 02/19 for more work

--- a/Diary/Daily Notes/2024-02-19.md
+++ b/Diary/Daily Notes/2024-02-19.md
@@ -1,7 +1,7 @@
 ---
 tags:
   - daily
-Title: Setting Up NVIM and made shorts for Champloo
+Title: 
 ---
 
 <- [[00 Daily Notes Hub | Daily Notes Hub]]
@@ -37,7 +37,7 @@ nav.push(next ? '[[' + next[0] + ']]' : none);
 //dv.paragraph(nav.join(" · "));
 dv.paragraph(nav[0] + ' ← ' + nav[1] + ' → ' + nav[2]);
 ```
-- Summary:: Like a dumbass, I woke up at 10 AM and didn't do jack shit until basically 2. I was working on Neovim trying to get the configs to work. Getting the init.lua to work is a bitch, especially since the tutorial I was following made me set up everything like shit. Regardless, I got Pomo set up and almost got Obsidian incorporation working? not really, i need to still figure out obsidian.nvim and the zenmode focus stuff. but still, good progress. <br> In any case, I have to work on the Champloo shorts because we finally finished the Powerlifting video and we want to mass upload today. So I have to get that sorted.
+- Summary::  
 
 ## 💡 New Discoveries
 
@@ -45,14 +45,17 @@ dv.paragraph(nav[0] + ' ← ' + nav[1] + ' → ' + nav[2]);
 
 ## 🛳️ Ship's Log
 ### Tasks Log
-- [x] Figure out pomo
-- [x] Figure out markdown preview
 - [ ] make shorts for the youtube videos
     - [x] make 3x short for tsushima maru
     - [x] make 3x short for soba
     - [ ] make 3x short for miu's karate
     - [ ] make 3x short for powerlifting
     - [ ] make 3x short fr youngmin's karate
+- [ ] finish capstone (fuck)
+- [ ] finish bio notes (also fuck)
+- [ ] finish english
+- [ ] finish maths
+- [ ] finish econ
 
 
 ### Happenings
